--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,3 +5,8 @@ add_executable(hello hello.c)
 target_link_libraries(hello m)
 
 #install(TARGETS ${TARGET} DESTINATION bin)
+set(EXECUTABLES
+  hello
+)
+
+install(TARGETS ${EXECUTABLES} DESTINATION apps)
