* changed install path again

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,9 @@ set(TARGET hello)
 add_executable(hello hello.c)
 target_link_libraries(hello m)
 
-#install(TARGETS ${TARGET} DESTINATION bin)
+
 set(EXECUTABLES
   hello
 )
 
-install(TARGETS ${EXECUTABLES} DESTINATION bin)
+install(TARGETS ${EXECUTABLES} DESTINATION /usr/bin)
