--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,6 @@ SET(CPACK_PACKAGE_VERSION_PATCH "1")
 SET(CPACK_PACKAGE_VERSION ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH})
 SET(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-i686)
 
-set(CMAKE_INSTALL_PREFIX bin)
+#set(CMAKE_INSTALL_PREFIX bin)
 add_subdirectory(src)
 
