--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,8 +5,8 @@ add_executable(hello hello.c)
 target_link_libraries(hello m)
 
 
-set(EXECUTABLES
-  hello
-)
+#set(EXECUTABLES
+#  hello
+#)
 
-install(TARGETS ${EXECUTABLES} DESTINATION /usr/bin)
+#install(TARGETS ${EXECUTABLES} DESTINATION /usr/bin)
