--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,9 +4,8 @@ set(TARGET hello)
 add_executable(hello hello.c)
 target_link_libraries(hello m)
 
-
 set(EXECUTABLES
   hello
 )
 
-install(TARGETS ${EXECUTABLES} DESTINATION /usr/bin)
+install(TARGETS ${EXECUTABLES} DESTINATION bin)
